--- a/config/clouddriver.yml
+++ b/config/clouddriver.yml
@@ -1023,6 +1023,686 @@ kubernetes:
     kubeconfigFile: /custom-volume/kubecfg-remote
     oAuthScopes: []
     onlySpinnakerManaged: false
+  - name: k8s-acc-61
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-62
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-63
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-64
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-65
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-66
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-67
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-68
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-69
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-70
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-71
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-72
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-73
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-74
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-75
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-76
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-77
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-78
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-79
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-80
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-81
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-82
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-83
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-84
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-85
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-86
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-87
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-88
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-89
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-90
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-91
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-92
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-93
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-94
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-95
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-96
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-97
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-98
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-99
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+  - name: k8s-acc-100
+    kubectlExecutable: /pv/hang
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
 
 cloudfoundry:
   primaryAccount: cf-1
