--- a/config/clouddriver.yml
+++ b/config/clouddriver.yml
@@ -1786,3 +1786,163 @@ cloudfoundry:
     requiredGroupMembership: []
     skipSslValidation: true
     user: admin
+  - api: api.sys.sanmarcos.cf-app.com
+    appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+    name: cf-11
+    password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
+    permissions: {}
+    requiredGroupMembership: []
+    skipSslValidation: true
+    user: admin
+  - api: api.sys.sanmarcos.cf-app.com
+    appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+    name: cf-12
+    password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
+    permissions: {}
+    requiredGroupMembership: []
+    skipSslValidation: true
+    user: admin
+  - api: api.sys.sanmarcos.cf-app.com
+    appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+    name: cf-13
+    password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
+    permissions: {}
+    requiredGroupMembership: []
+    skipSslValidation: true
+    user: admin
+  - api: api.sys.sanmarcos.cf-app.com
+    appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+    name: cf-14
+    password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
+    permissions: {}
+    requiredGroupMembership: []
+    skipSslValidation: true
+    user: admin
+  - api: api.sys.sanmarcos.cf-app.com
+    appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+    name: cf-15
+    password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
+    permissions: {}
+    requiredGroupMembership: []
+    skipSslValidation: true
+    user: admin
+  - api: api.sys.sanmarcos.cf-app.com
+    appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+    name: cf-16
+    password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
+    permissions: {}
+    requiredGroupMembership: []
+    skipSslValidation: true
+    user: admin
+  - api: api.sys.sanmarcos.cf-app.com
+    appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+    name: cf-17
+    password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
+    permissions: {}
+    requiredGroupMembership: []
+    skipSslValidation: true
+    user: admin
+  - api: api.sys.sanmarcos.cf-app.com
+    appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+    name: cf-18
+    password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
+    permissions: {}
+    requiredGroupMembership: []
+    skipSslValidation: true
+    user: admin
+  - api: api.sys.sanmarcos.cf-app.com
+    appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+    name: cf-19
+    password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
+    permissions: {}
+    requiredGroupMembership: []
+    skipSslValidation: true
+    user: admin
+  - api: api.sys.sanmarcos.cf-app.com
+    appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+    name: cf-20
+    password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
+    permissions: {}
+    requiredGroupMembership: []
+    skipSslValidation: true
+    user: admin
+  - api: api.sys.sanmarcos.cf-app.com
+    appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+    name: cf-21
+    password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
+    permissions: {}
+    requiredGroupMembership: []
+    skipSslValidation: true
+    user: admin
+  - api: api.sys.sanmarcos.cf-app.com
+    appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+    name: cf-22
+    password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
+    permissions: {}
+    requiredGroupMembership: []
+    skipSslValidation: true
+    user: admin
+  - api: api.sys.sanmarcos.cf-app.com
+    appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+    name: cf-23
+    password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
+    permissions: {}
+    requiredGroupMembership: []
+    skipSslValidation: true
+    user: admin
+  - api: api.sys.sanmarcos.cf-app.com
+    appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+    name: cf-24
+    password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
+    permissions: {}
+    requiredGroupMembership: []
+    skipSslValidation: true
+    user: admin
+  - api: api.sys.sanmarcos.cf-app.com
+    appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+    name: cf-25
+    password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
+    permissions: {}
+    requiredGroupMembership: []
+    skipSslValidation: true
+    user: admin
+  - api: api.sys.sanmarcos.cf-app.com
+    appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+    name: cf-26
+    password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
+    permissions: {}
+    requiredGroupMembership: []
+    skipSslValidation: true
+    user: admin
+  - api: api.sys.sanmarcos.cf-app.com
+    appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+    name: cf-27
+    password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
+    permissions: {}
+    requiredGroupMembership: []
+    skipSslValidation: true
+    user: admin
+  - api: api.sys.sanmarcos.cf-app.com
+    appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+    name: cf-28
+    password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
+    permissions: {}
+    requiredGroupMembership: []
+    skipSslValidation: true
+    user: admin
+  - api: api.sys.sanmarcos.cf-app.com
+    appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+    name: cf-29
+    password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
+    permissions: {}
+    requiredGroupMembership: []
+    skipSslValidation: true
+    user: admin
+  - api: api.sys.sanmarcos.cf-app.com
+    appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
+    name: cf-30
+    password: ${CLOUDDRIVER_SPIN_SECRETS_CF_PASSWORD}
+    permissions: {}
+    requiredGroupMembership: []
+    skipSslValidation: true
+    user: admin
